# cinema-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  main.py  pyproject.toml  pytest.ini
api/v1/: urls.py
api/v1/cinema/: handlers.py  schemas.py
api/v1/common/: handlers.py
api/v1/users/: handlers.py  schemas.py
apps/cinema/exceptions/: halls.py  places.py  rows.py
apps/cinema/models/: __init__.py  halls.py  places.py  rows.py
apps/cinema/repositories/: halls.py  places.py  rows.py
apps/cinema/services/: halls.py  places.py  rows.py
apps/cinema/use_cases/: hall_create.py  place_create.py  row_create.py
apps/films/exceptions/: rent_date.py
apps/films/models/: __init__.py  (+4 more)
core/: config.py  containers.py  generics.py  server.py
core/database/: __init__.py  base.py  session.py  transactional.py
core/enums/: films.py
core/exceptions/: __init__.py  base.py
core/loggings/: __init__.py  base.py  logguc.py
core/middlewares/: __init__.py  auth.py  logAPI.py  sqlalchemy.py
core/permissions/: base.py  depends.py
core/repositories/: __init__.py  base.py
core/security/: depends.py  jwt.py
core/services/: base.py
core/use_cases/: base.py
docker-compose/: app.yaml  storages.yaml
migrations/: env.py
migrations/versions/: 5744a17f2cc3_добавлен_констрейн_уникального_title_.py  a5a017b79814_добавлены_модели_кинотеатра_и_фильмов.py
tests/: conftest.py  utils.py
tests/cinema/: test_api.py
tests/factories/: base.py  films.py  halls.py  place.py  row.py  user.py
tests/films/: test_api.py
tests/fixtures/: __init__.py  core.py
tests/users/: test_api.py
(+44 files in other folders)
