[tool.poetry]
name = "cinema-backend"
version = "0.1.0"
description = ""
authors = ["kern"]
readme = "README.md"
packages = [{include = "cinema_backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
